Replacing hard-coded price for widgets

--- a/client/src/main/resources/com/arcbees/beeshop/client/resources/AppMessages_en.properties
+++ b/client/src/main/resources/com/arcbees/beeshop/client/resources/AppMessages_en.properties
@@ -6,3 +6,9 @@ brandName[JUKITO]=Jukito
 brandName[GSSS]=GSSS
 brandName[GQUERY]=GQuery
 brandName[GAE_STUDIO]=GAE Studio
+shirt=Shirt
+bag=Bag
+cup=Cup
+mug=Mug
+key=Key
+phoneCase=Case
