Extracted secondary products to presenterWidgets

--- a/client/src/main/resources/com/arcbees/beeshop/client/resources/AppMessages_en.properties
+++ b/client/src/main/resources/com/arcbees/beeshop/client/resources/AppMessages_en.properties
@@ -22,9 +22,11 @@ brandName[JUKITO]=Jukito
 brandName[GSSS]=GSSS
 brandName[GQUERY]=GQuery
 brandName[GAE_STUDIO]=GAE Studio
-shirt=Shirt
-bag=Bag
-cup=Cup
-mug=Mug
-key=Key
-phoneCase=Case
+
+productName=
+productName[SHIRT]=Shirt
+productName[BAG]=Bag
+productName[MUG]=Mug
+productName[THERMOS]=Cup
+productName[USB_KEY]=Key
+productName[PHONE_CASE]=Case
