--- a/client/src/main/resources/com/google/gwt/i18n/client/LocalizableResource.properties
+++ b/client/src/main/resources/com/google/gwt/i18n/client/LocalizableResource.properties
@@ -1,6 +1,3 @@
-# Description: shopping by projects
-CAB34465AC985F1336F1B83AF1D0F301=shopping by brand
-
 # Description: to show our hive products
 9D7F8579015417C5862F97D03EB189EA=to show our hive of products and branded gears. Enjoy\!
 
@@ -21,3 +18,7 @@ CAB34465AC985F1336F1B83AF1D0F301=shopping by brand
 
 # Description: case study
 CCC98160003CB1DF80008A07B495C48F=The Beestore is a case study from Arcbees
+
+# Description: shopping by brand
+AA532DBBD6A91E57BF008285F2E8461E=shopping by brand
+
