--- a/client/src/main/resources/com/google/gwt/i18n/client/LocalizableResource_fr.properties
+++ b/client/src/main/resources/com/google/gwt/i18n/client/LocalizableResource_fr.properties
@@ -1,9 +1,6 @@
 # Description: to show our hive products
 9D7F8579015417C5862F97D03EB189EA=pour démontrer les produits de Hive et nos accessoires. Amusez-vous\!
 
-# Description: shopping by projects
-CAB34465AC985F1336F1B83AF1D0F301=magasiner par marque
-
 # Description: Contact us
 02D4482D332E1AEF3437CD61C9BCC624=Contact
 
@@ -21,3 +18,9 @@ CAB34465AC985F1336F1B83AF1D0F301=magasiner par marque
 
 # Description: case study
 CCC98160003CB1DF80008A07B495C48F=Le Beestore est une étude de cas d''Arcbees
+
+# Description: shopping by brand
+AA532DBBD6A91E57BF008285F2E8461E=magasiner par marque
+
+### NON-UIBINDER TRANSLATIONS
+
