BSTOR-48 - Refactor Product -> ProductType + i18n in the cart

--- a/client/src/main/resources/com/arcbees/beeshop/client/resources/AppMessages_en.properties
+++ b/client/src/main/resources/com/arcbees/beeshop/client/resources/AppMessages_en.properties
@@ -14,3 +14,59 @@ productName[MUG]=Mug
 productName[THERMOS]=Cup
 productName[USB_KEY]=Key
 productName[PHONE_CASE]=Case
+
+size=
+size[SMALL]=Small
+size[MEDIUM]=Medium
+size[LARGE]=Large
+size[XLARGE]=X-Large
+size[UNIQUE]=Unique
+
+itemColor=
+itemColor[SHIRT][ARCBEES]=Grey Shirt
+itemColor[SHIRT][GWTP]=Orange Shirt
+itemColor[SHIRT][CHOSEN]=Green Shirt
+itemColor[SHIRT][JUKITO]=Red Shirt
+itemColor[SHIRT][GSSS]=Purple Shirt
+itemColor[SHIRT][GQUERY]=Blue Shirt
+itemColor[SHIRT][GAE_STUDIO]=Cyan Shirt
+
+itemColor[BAG][ARCBEES]=Yellow Bag
+itemColor[BAG][GWTP]=Orange Bag
+itemColor[BAG][CHOSEN]=Green Bag
+itemColor[BAG][JUKITO]=Red Bag
+itemColor[BAG][GSSS]=Purple Bag
+itemColor[BAG][GQUERY]=Blue Bag
+itemColor[BAG][GAE_STUDIO]=Cyan Bag
+
+itemColor[MUG][ARCBEES]=Yellow Mug
+itemColor[MUG][GWTP]=Orange Mug
+itemColor[MUG][CHOSEN]=Green Mug
+itemColor[MUG][JUKITO]=Red Mug
+itemColor[MUG][GSSS]=Purple Mug
+itemColor[MUG][GQUERY]=Blue Mug
+itemColor[MUG][GAE_STUDIO]=Cyan Mug
+
+itemColor[THERMOS][ARCBEES]=Yellow Thermos
+itemColor[THERMOS][GWTP]=Orange Thermos
+itemColor[THERMOS][CHOSEN]=Green Thermos
+itemColor[THERMOS][JUKITO]=Red Thermos
+itemColor[THERMOS][GSSS]=Purple Thermos
+itemColor[THERMOS][GQUERY]=Blue Thermos
+itemColor[THERMOS][GAE_STUDIO]=Cyan Thermos
+
+itemColor[USB_KEY][ARCBEES]=Yellow Usb Key
+itemColor[USB_KEY][GWTP]=Orange Usb Key
+itemColor[USB_KEY][CHOSEN]=Green Usb Key
+itemColor[USB_KEY][JUKITO]=Red Usb Key
+itemColor[USB_KEY][GSSS]=Purple Usb Key
+itemColor[USB_KEY][GQUERY]=Blue Usb Key
+itemColor[USB_KEY][GAE_STUDIO]=Cyan Usb Key
+
+itemColor[PHONE_CASE][ARCBEES]=Yellow Phone case
+itemColor[PHONE_CASE][GWTP]=Orange Phone case
+itemColor[PHONE_CASE][CHOSEN]=Green Phone case
+itemColor[PHONE_CASE][JUKITO]=Red Phone case
+itemColor[PHONE_CASE][GSSS]=Purple Phone case
+itemColor[PHONE_CASE][GQUERY]=Blue Phone case
+itemColor[PHONE_CASE][GAE_STUDIO]=Cyan Phone case
