--- a/client/src/main/resources/com/arcbees/beeshop/client/resources/AppMessages_fr.properties
+++ b/client/src/main/resources/com/arcbees/beeshop/client/resources/AppMessages_fr.properties
@@ -8,9 +8,65 @@ brandName[GQUERY]=GQuery
 brandName[GAE_STUDIO]=GAE Studio
 
 productName=
-productName[SHIRT]=Shirt
+productName[SHIRT]=Chandail
 productName[BAG]=Sac
 productName[MUG]=Tasse
 productName[THERMOS]=Thermos
 productName[USB_KEY]=Clé USB
 productName[PHONE_CASE]=Protecteur de iPhone
+
+size=
+size[SMALL]=Small
+size[MEDIUM]=Medium
+size[LARGE]=Large
+size[XLARGE]=X-Large
+size[UNIQUE]=Unique
+
+itemColor=
+itemColor[SHIRT][ARCBEES]=Chandail jaune
+itemColor[SHIRT][GWTP]=Chandail orange
+itemColor[SHIRT][CHOSEN]=Chandail vert
+itemColor[SHIRT][JUKITO]=Chandail rouge
+itemColor[SHIRT][GSSS]=Chandail mauve
+itemColor[SHIRT][GQUERY]=Chandail bleu
+itemColor[SHIRT][GAE_STUDIO]=Chandail cyan
+
+itemColor[BAG][ARCBEES]=Sac jaune
+itemColor[BAG][GWTP]=Sac orange
+itemColor[BAG][CHOSEN]=Sac vert
+itemColor[BAG][JUKITO]=Sac rouge
+itemColor[BAG][GSSS]=Sac mauve
+itemColor[BAG][GQUERY]=Sac bleu
+itemColor[BAG][GAE_STUDIO]=Sac cyan
+
+itemColor[MUG][ARCBEES]=Tasse jaune
+itemColor[MUG][GWTP]=Tasse orange
+itemColor[MUG][CHOSEN]=Tasse verte
+itemColor[MUG][JUKITO]=Tasse rouge
+itemColor[MUG][GSSS]=Tasse mauve
+itemColor[MUG][GQUERY]=Tasse bleue
+itemColor[MUG][GAE_STUDIO]=Tasse cyan
+
+itemColor[THERMOS][ARCBEES]=Thermos jaune
+itemColor[THERMOS][GWTP]=Thermos orange
+itemColor[THERMOS][CHOSEN]=Thermos vert
+itemColor[THERMOS][JUKITO]=Thermos rouge
+itemColor[THERMOS][GSSS]=Thermos mauve
+itemColor[THERMOS][GQUERY]=Thermos bleu
+itemColor[THERMOS][GAE_STUDIO]=Thermos cyan
+
+itemColor[USB_KEY][ARCBEES]=Clé USB jaune
+itemColor[USB_KEY][GWTP]=Clé USB orange
+itemColor[USB_KEY][CHOSEN]=Clé USB verte
+itemColor[USB_KEY][JUKITO]=Clé USB rouge
+itemColor[USB_KEY][GSSS]=Clé USB mauve
+itemColor[USB_KEY][GQUERY]=Clé USB bleue
+itemColor[USB_KEY][GAE_STUDIO]=Clé USB cyan
+
+itemColor[PHONE_CASE][ARCBEES]=Étui pour iPhone jaune
+itemColor[PHONE_CASE][GWTP]=Étui pour iPhone orange
+itemColor[PHONE_CASE][CHOSEN]=Étui pour iPhone vert
+itemColor[PHONE_CASE][JUKITO]=Étui pour iPhone rouge
+itemColor[PHONE_CASE][GSSS]=Étui pour iPhone mauve
+itemColor[PHONE_CASE][GQUERY]=Étui pour iPhone bleu
+itemColor[PHONE_CASE][GAE_STUDIO]=Étui pour iPhone cyan
