BSTOR-50 - Added translations

--- a/client/src/main/resources/com/google/gwt/i18n/client/LocalizableResource_fr.properties
+++ b/client/src/main/resources/com/google/gwt/i18n/client/LocalizableResource_fr.properties
@@ -7,12 +7,6 @@
 # Description: Products
 068F80C7519D0528FB08E82137A72131=Produits
 
-# Description: cart
-54013BA69C196820E56801F1EF5AAD54=Panier
-
-# Description: Wishlist
-641254D77E7A473AA5910574F3F9453C=Liste de souhaits
-
 # Description: Home
 8CF04A9734132302F96DA8E113E80CE5=Accueil
 
@@ -21,6 +15,42 @@ CCC98160003CB1DF80008A07B495C48F=Le Beestore est une étude de cas d''Arcbees
 
 # Description: shopping by brand
 AA532DBBD6A91E57BF008285F2E8461E=magasiner par marque
+
+# Description: arge (XLarge)
+26820F3C124EF760ABF2BE8B6CB1507A=rand
+
+# Description: Add to cart
+2D0F6B8300BE19CF35E89E66F0677F95=Ajouter au panier
+
+# Description: mall (small)
+2EE385D4E42E07F2C539B597559E70EE=etit
+
+# Description: previous product
+3087C2F01537D66481494BB26E2089F3=Produit précédent
+
+# Description: edium (medium)
+5A2527D5BD6D4437026E7858C9CD30E8=oyen
+
+# Description: S (small)
+5DBC98DCC983A70728BD082D1A47546E=P
+
+# Description: M (medium)
+69691C7BDCC3CE6D5D8A1361F22D04AC=M
+
+# Description: size
+6F6CB72D544962FA333E2E34CE64F719=Grandeur
+
+# Description: next product
+7D0F7B8A8B1BFCBBE465742F7D509AB2=Produit suivant
+
+# Description: brands
+84BE54BB4BD1B755A27D86388700D097=Marques
+
+# Description: XL (XLarge)
+A7A4CCC5E1A068D87F4965E014329201=TG
+
+# Description: L (large)
+D20CAEC3B48A1EEF164CB4CA81BA2587=G
 
 ### NON-UIBINDER TRANSLATIONS
 
