Price widget too!

--- a/client/src/main/resources/com/google/gwt/i18n/client/LocalizableResource.properties
+++ b/client/src/main/resources/com/google/gwt/i18n/client/LocalizableResource.properties
@@ -52,5 +52,5 @@ A7A4CCC5E1A068D87F4965E014329201=XL
 # Description: arge (XLarge)
 26820F3C124EF760ABF2BE8B6CB1507A=arge
 
-### NON-UIBINDER TRANSLATIONS
-
+# Description: shop
+9F82518D468B9FEE614FCC92F76BB163=Shop
