--- a/client/src/main/resources/com/google/gwt/i18n/client/LocalizableResource_fr.properties
+++ b/client/src/main/resources/com/google/gwt/i18n/client/LocalizableResource_fr.properties
@@ -44,7 +44,7 @@ AA532DBBD6A91E57BF008285F2E8461E=magasiner par marque
 7D0F7B8A8B1BFCBBE465742F7D509AB2=Produit suivant
 
 # Description: brands
-84BE54BB4BD1B755A27D86388700D097=Marques
+84BE54BB4BD1B755A27D86388700D097=Marque
 
 # Description: XL (XLarge)
 A7A4CCC5E1A068D87F4965E014329201=TG
@@ -52,5 +52,5 @@ A7A4CCC5E1A068D87F4965E014329201=TG
 # Description: L (large)
 D20CAEC3B48A1EEF164CB4CA81BA2587=G
 
-### NON-UIBINDER TRANSLATIONS
-
+# Description: shop
+9F82518D468B9FEE614FCC92F76BB163=Acheter
