BSTOR-50 - Translate Cart

--- a/client/src/main/resources/com/google/gwt/i18n/client/LocalizableResource.properties
+++ b/client/src/main/resources/com/google/gwt/i18n/client/LocalizableResource.properties
@@ -54,3 +54,27 @@ A7A4CCC5E1A068D87F4965E014329201=XL
 
 # Description: shop
 9F82518D468B9FEE614FCC92F76BB163=Shop
+
+# Description: add some gears in it
+E9CDECFC86257ADB6786A4F2CEF48C45=add some gears in it
+
+# Description: Your bag is so lonely
+74111668508573B4A9A8C16468CA0B58=Your bag is so lonely
+
+# Description: Subtotal
+2194AAEC8CC7086AB0E93F74547E5F53=Subtotal
+
+# Description: Shopping cart
+F373B403975D367491574FB2C739FEF7=Shopping cart
+
+# Description: Return to shopping
+C22238FAE88FB0307525ABF1889F9F74=Return to shopping
+
+# Description: Proceed to checkout
+7E0BF6D67701868AAC3116ADE8FEA957=Proceed to checkout
+
+# Description: Size
+AF645946859133F0FB13B23577B39AB5=Size\:
+
+### NON-UIBINDER TRANSLATIONS
+
