--- a/client/src/main/resources/com/google/gwt/i18n/client/LocalizableResource_fr.properties
+++ b/client/src/main/resources/com/google/gwt/i18n/client/LocalizableResource_fr.properties
@@ -54,3 +54,27 @@ D20CAEC3B48A1EEF164CB4CA81BA2587=G
 
 # Description: shop
 9F82518D468B9FEE614FCC92F76BB163=Acheter
+
+# Description: Size
+AF645946859133F0FB13B23577B39AB5=Grandeur\:
+
+# Description: Proceed to checkout
+7E0BF6D67701868AAC3116ADE8FEA957=Passer la commande
+
+# Description: Return to shopping
+C22238FAE88FB0307525ABF1889F9F74=Retourner à la boutique
+
+# Description: Shopping cart
+F373B403975D367491574FB2C739FEF7=Panier
+
+# Description: Subtotal
+2194AAEC8CC7086AB0E93F74547E5F53=Sous-total
+
+# Description: Your bag is so lonely
+74111668508573B4A9A8C16468CA0B58=Votre panier est vide
+
+# Description: add some gears in it
+E9CDECFC86257ADB6786A4F2CEF48C45=ajoutez-y des articles
+
+### NON-UIBINDER TRANSLATIONS
+
