BSTOR-51 - Missing i18n text for logo color

--- a/client/src/main/resources/com/arcbees/beeshop/client/resources/AppMessages_fr.properties
+++ b/client/src/main/resources/com/arcbees/beeshop/client/resources/AppMessages_fr.properties
@@ -23,50 +23,99 @@ size[XLARGE]=X-Large
 size[UNIQUE]=Unique
 
 itemColor=
-itemColor[SHIRT][ARCBEES]=Chandail jaune
-itemColor[SHIRT][GWTP]=Chandail orange
-itemColor[SHIRT][CHOSEN]=Chandail vert
-itemColor[SHIRT][JUKITO]=Chandail rouge
-itemColor[SHIRT][GSSS]=Chandail mauve
-itemColor[SHIRT][GQUERY]=Chandail bleu
-itemColor[SHIRT][GAE_STUDIO]=Chandail cyan
+itemColor[SHIRT|ARCBEES]=Chandail jaune
+itemColor[SHIRT|GWTP]=Chandail orange
+itemColor[SHIRT|CHOSEN]=Chandail vert
+itemColor[SHIRT|JUKITO]=Chandail rouge
+itemColor[SHIRT|GSSS]=Chandail mauve
+itemColor[SHIRT|GQUERY]=Chandail bleu
+itemColor[SHIRT|GAE_STUDIO]=Chandail cyan
 
-itemColor[BAG][ARCBEES]=Sac jaune
-itemColor[BAG][GWTP]=Sac orange
-itemColor[BAG][CHOSEN]=Sac vert
-itemColor[BAG][JUKITO]=Sac rouge
-itemColor[BAG][GSSS]=Sac mauve
-itemColor[BAG][GQUERY]=Sac bleu
-itemColor[BAG][GAE_STUDIO]=Sac cyan
+itemColor[BAG|ARCBEES]=Sac jaune
+itemColor[BAG|GWTP]=Sac orange
+itemColor[BAG|CHOSEN]=Sac vert
+itemColor[BAG|JUKITO]=Sac rouge
+itemColor[BAG|GSSS]=Sac mauve
+itemColor[BAG|GQUERY]=Sac bleu
+itemColor[BAG|GAE_STUDIO]=Sac cyan
 
-itemColor[MUG][ARCBEES]=Tasse jaune
-itemColor[MUG][GWTP]=Tasse orange
-itemColor[MUG][CHOSEN]=Tasse verte
-itemColor[MUG][JUKITO]=Tasse rouge
-itemColor[MUG][GSSS]=Tasse mauve
-itemColor[MUG][GQUERY]=Tasse bleue
-itemColor[MUG][GAE_STUDIO]=Tasse cyan
+itemColor[MUG|ARCBEES]=Tasse jaune
+itemColor[MUG|GWTP]=Tasse orange
+itemColor[MUG|CHOSEN]=Tasse verte
+itemColor[MUG|JUKITO]=Tasse rouge
+itemColor[MUG|GSSS]=Tasse mauve
+itemColor[MUG|GQUERY]=Tasse bleue
+itemColor[MUG|GAE_STUDIO]=Tasse cyan
 
-itemColor[THERMOS][ARCBEES]=Thermos jaune
-itemColor[THERMOS][GWTP]=Thermos orange
-itemColor[THERMOS][CHOSEN]=Thermos vert
-itemColor[THERMOS][JUKITO]=Thermos rouge
-itemColor[THERMOS][GSSS]=Thermos mauve
-itemColor[THERMOS][GQUERY]=Thermos bleu
-itemColor[THERMOS][GAE_STUDIO]=Thermos cyan
+itemColor[THERMOS|ARCBEES]=Thermos jaune
+itemColor[THERMOS|GWTP]=Thermos orange
+itemColor[THERMOS|CHOSEN]=Thermos vert
+itemColor[THERMOS|JUKITO]=Thermos rouge
+itemColor[THERMOS|GSSS]=Thermos mauve
+itemColor[THERMOS|GQUERY]=Thermos bleu
+itemColor[THERMOS|GAE_STUDIO]=Thermos cyan
 
-itemColor[USB_KEY][ARCBEES]=Clé USB jaune
-itemColor[USB_KEY][GWTP]=Clé USB orange
-itemColor[USB_KEY][CHOSEN]=Clé USB verte
-itemColor[USB_KEY][JUKITO]=Clé USB rouge
-itemColor[USB_KEY][GSSS]=Clé USB mauve
-itemColor[USB_KEY][GQUERY]=Clé USB bleue
-itemColor[USB_KEY][GAE_STUDIO]=Clé USB cyan
+itemColor[USB_KEY|ARCBEES]=Clé USB jaune
+itemColor[USB_KEY|GWTP]=Clé USB orange
+itemColor[USB_KEY|CHOSEN]=Clé USB verte
+itemColor[USB_KEY|JUKITO]=Clé USB rouge
+itemColor[USB_KEY|GSSS]=Clé USB mauve
+itemColor[USB_KEY|GQUERY]=Clé USB bleue
+itemColor[USB_KEY|GAE_STUDIO]=Clé USB cyan
 
-itemColor[PHONE_CASE][ARCBEES]=Étui pour iPhone jaune
-itemColor[PHONE_CASE][GWTP]=Étui pour iPhone orange
-itemColor[PHONE_CASE][CHOSEN]=Étui pour iPhone vert
-itemColor[PHONE_CASE][JUKITO]=Étui pour iPhone rouge
-itemColor[PHONE_CASE][GSSS]=Étui pour iPhone mauve
-itemColor[PHONE_CASE][GQUERY]=Étui pour iPhone bleu
-itemColor[PHONE_CASE][GAE_STUDIO]=Étui pour iPhone cyan
+itemColor[PHONE_CASE|ARCBEES]=Étui pour iPhone jaune
+itemColor[PHONE_CASE|GWTP]=Étui pour iPhone orange
+itemColor[PHONE_CASE|CHOSEN]=Étui pour iPhone vert
+itemColor[PHONE_CASE|JUKITO]=Étui pour iPhone rouge
+itemColor[PHONE_CASE|GSSS]=Étui pour iPhone mauve
+itemColor[PHONE_CASE|GQUERY]=Étui pour iPhone bleu
+itemColor[PHONE_CASE|GAE_STUDIO]=Étui pour iPhone cyan
+
+logoColor=
+logoColor[SHIRT|ARCBEES]=Logo jaune
+logoColor[SHIRT|GWTP]=Logo blanc
+logoColor[SHIRT|CHOSEN]=Logo blanc
+logoColor[SHIRT|JUKITO]=Logo blanc
+logoColor[SHIRT|GSSS]=Logo blanc
+logoColor[SHIRT|GQUERY]=Logo blanc
+logoColor[SHIRT|GAE_STUDIO]=Logo blanc
+
+logoColor[BAG|ARCBEES]=Logo noir
+logoColor[BAG|GWTP]=Logo blanc
+logoColor[BAG|CHOSEN]=Logo blanc
+logoColor[BAG|JUKITO]=Logo blanc
+logoColor[BAG|GSSS]=Logo blanc
+logoColor[BAG|GQUERY]=Logo bleu
+logoColor[BAG|GAE_STUDIO]=Logo blanc
+
+logoColor[MUG|ARCBEES]=Logo jaune
+logoColor[MUG|GWTP]=Logo orange
+logoColor[MUG|CHOSEN]=Logo vert
+logoColor[MUG|JUKITO]=Logo rouge
+logoColor[MUG|GSSS]=Logo mauve
+logoColor[MUG|GQUERY]=Logo bleu
+logoColor[MUG|GAE_STUDIO]=Logo cyan
+
+logoColor[THERMOS|ARCBEES]=Logo noir
+logoColor[THERMOS|GWTP]=Logo blanc
+logoColor[THERMOS|CHOSEN]=Logo blanc
+logoColor[THERMOS|JUKITO]=Logo blanc
+logoColor[THERMOS|GSSS]=Logo blanc
+logoColor[THERMOS|GQUERY]=Logo blanc
+logoColor[THERMOS|GAE_STUDIO]=Logo blanc
+
+logoColor[USB_KEY|ARCBEES]=Logo noir
+logoColor[USB_KEY|GWTP]=Logo blanc
+logoColor[USB_KEY|CHOSEN]=Logo blanc
+logoColor[USB_KEY|JUKITO]=Logo blanc
+logoColor[USB_KEY|GSSS]=Logo blanc
+logoColor[USB_KEY|GQUERY]=Logo blanc
+logoColor[USB_KEY|GAE_STUDIO]=Logo blanc
+
+logoColor[PHONE_CASE|ARCBEES]=Logo noir
+logoColor[PHONE_CASE|GWTP]=Logo blanc
+logoColor[PHONE_CASE|CHOSEN]=Logo blanc
+logoColor[PHONE_CASE|JUKITO]=Logo blanc
+logoColor[PHONE_CASE|GSSS]=Logo blanc
+logoColor[PHONE_CASE|GQUERY]=Logo blanc
+logoColor[PHONE_CASE|GAE_STUDIO]=Logo blanc
