--- a/client/src/main/resources/com/arcbees/beeshop/client/resources/AppMessages_en.properties
+++ b/client/src/main/resources/com/arcbees/beeshop/client/resources/AppMessages_en.properties
@@ -23,50 +23,99 @@ size[XLARGE]=X-Large
 size[UNIQUE]=Unique
 
 itemColor=
-itemColor[SHIRT][ARCBEES]=Grey Shirt
-itemColor[SHIRT][GWTP]=Orange Shirt
-itemColor[SHIRT][CHOSEN]=Green Shirt
-itemColor[SHIRT][JUKITO]=Red Shirt
-itemColor[SHIRT][GSSS]=Purple Shirt
-itemColor[SHIRT][GQUERY]=Blue Shirt
-itemColor[SHIRT][GAE_STUDIO]=Cyan Shirt
+itemColor[SHIRT|ARCBEES]=Grey Shirt
+itemColor[SHIRT|GWTP]=Orange Shirt
+itemColor[SHIRT|CHOSEN]=Green Shirt
+itemColor[SHIRT|JUKITO]=Red Shirt
+itemColor[SHIRT|GSSS]=Purple Shirt
+itemColor[SHIRT|GQUERY]=Blue Shirt
+itemColor[SHIRT|GAE_STUDIO]=Cyan Shirt
 
-itemColor[BAG][ARCBEES]=Yellow Bag
-itemColor[BAG][GWTP]=Orange Bag
-itemColor[BAG][CHOSEN]=Green Bag
-itemColor[BAG][JUKITO]=Red Bag
-itemColor[BAG][GSSS]=Purple Bag
-itemColor[BAG][GQUERY]=Blue Bag
-itemColor[BAG][GAE_STUDIO]=Cyan Bag
+itemColor[BAG|ARCBEES]=Yellow Bag
+itemColor[BAG|GWTP]=Orange Bag
+itemColor[BAG|CHOSEN]=Green Bag
+itemColor[BAG|JUKITO]=Red Bag
+itemColor[BAG|GSSS]=Purple Bag
+itemColor[BAG|GQUERY]=Blue Bag
+itemColor[BAG|GAE_STUDIO]=Cyan Bag
 
-itemColor[MUG][ARCBEES]=Yellow Mug
-itemColor[MUG][GWTP]=Orange Mug
-itemColor[MUG][CHOSEN]=Green Mug
-itemColor[MUG][JUKITO]=Red Mug
-itemColor[MUG][GSSS]=Purple Mug
-itemColor[MUG][GQUERY]=Blue Mug
-itemColor[MUG][GAE_STUDIO]=Cyan Mug
+itemColor[MUG|ARCBEES]=Yellow Mug
+itemColor[MUG|GWTP]=Orange Mug
+itemColor[MUG|CHOSEN]=Green Mug
+itemColor[MUG|JUKITO]=Red Mug
+itemColor[MUG|GSSS]=Purple Mug
+itemColor[MUG|GQUERY]=Blue Mug
+itemColor[MUG|GAE_STUDIO]=Cyan Mug
 
-itemColor[THERMOS][ARCBEES]=Yellow Thermos
-itemColor[THERMOS][GWTP]=Orange Thermos
-itemColor[THERMOS][CHOSEN]=Green Thermos
-itemColor[THERMOS][JUKITO]=Red Thermos
-itemColor[THERMOS][GSSS]=Purple Thermos
-itemColor[THERMOS][GQUERY]=Blue Thermos
-itemColor[THERMOS][GAE_STUDIO]=Cyan Thermos
+itemColor[THERMOS|ARCBEES]=Yellow Thermos
+itemColor[THERMOS|GWTP]=Orange Thermos
+itemColor[THERMOS|CHOSEN]=Green Thermos
+itemColor[THERMOS|JUKITO]=Red Thermos
+itemColor[THERMOS|GSSS]=Purple Thermos
+itemColor[THERMOS|GQUERY]=Blue Thermos
+itemColor[THERMOS|GAE_STUDIO]=Cyan Thermos
 
-itemColor[USB_KEY][ARCBEES]=Yellow Usb Key
-itemColor[USB_KEY][GWTP]=Orange Usb Key
-itemColor[USB_KEY][CHOSEN]=Green Usb Key
-itemColor[USB_KEY][JUKITO]=Red Usb Key
-itemColor[USB_KEY][GSSS]=Purple Usb Key
-itemColor[USB_KEY][GQUERY]=Blue Usb Key
-itemColor[USB_KEY][GAE_STUDIO]=Cyan Usb Key
+itemColor[USB_KEY|ARCBEES]=Yellow Usb Key
+itemColor[USB_KEY|GWTP]=Orange Usb Key
+itemColor[USB_KEY|CHOSEN]=Green Usb Key
+itemColor[USB_KEY|JUKITO]=Red Usb Key
+itemColor[USB_KEY|GSSS]=Purple Usb Key
+itemColor[USB_KEY|GQUERY]=Blue Usb Key
+itemColor[USB_KEY|GAE_STUDIO]=Cyan Usb Key
 
-itemColor[PHONE_CASE][ARCBEES]=Yellow Phone case
-itemColor[PHONE_CASE][GWTP]=Orange Phone case
-itemColor[PHONE_CASE][CHOSEN]=Green Phone case
-itemColor[PHONE_CASE][JUKITO]=Red Phone case
-itemColor[PHONE_CASE][GSSS]=Purple Phone case
-itemColor[PHONE_CASE][GQUERY]=Blue Phone case
-itemColor[PHONE_CASE][GAE_STUDIO]=Cyan Phone case
+itemColor[PHONE_CASE|ARCBEES]=Yellow Phone case
+itemColor[PHONE_CASE|GWTP]=Orange Phone case
+itemColor[PHONE_CASE|CHOSEN]=Green Phone case
+itemColor[PHONE_CASE|JUKITO]=Red Phone case
+itemColor[PHONE_CASE|GSSS]=Purple Phone case
+itemColor[PHONE_CASE|GQUERY]=Blue Phone case
+itemColor[PHONE_CASE|GAE_STUDIO]=Cyan Phone case
+
+logoColor=
+logoColor[SHIRT|ARCBEES]=Yellow logo
+logoColor[SHIRT|GWTP]=White logo
+logoColor[SHIRT|CHOSEN]=White logo
+logoColor[SHIRT|JUKITO]=White logo
+logoColor[SHIRT|GSSS]=White logo
+logoColor[SHIRT|GQUERY]=White logo
+logoColor[SHIRT|GAE_STUDIO]=White logo
+
+logoColor[BAG|ARCBEES]=Black logo
+logoColor[BAG|GWTP]=White logo
+logoColor[BAG|CHOSEN]=White logo
+logoColor[BAG|JUKITO]=White logo
+logoColor[BAG|GSSS]=White logo
+logoColor[BAG|GQUERY]=Blue logo
+logoColor[BAG|GAE_STUDIO]=White logo
+
+logoColor[MUG|ARCBEES]=Yellow logo
+logoColor[MUG|GWTP]=Orange logo
+logoColor[MUG|CHOSEN]=Green logo
+logoColor[MUG|JUKITO]=Red logo
+logoColor[MUG|GSSS]=Purple logo
+logoColor[MUG|GQUERY]=Blue logo
+logoColor[MUG|GAE_STUDIO]=Cyan logo
+
+logoColor[THERMOS|ARCBEES]=Black logo
+logoColor[THERMOS|GWTP]=White logo
+logoColor[THERMOS|CHOSEN]=White logo
+logoColor[THERMOS|JUKITO]=White logo
+logoColor[THERMOS|GSSS]=White logo
+logoColor[THERMOS|GQUERY]=White logo
+logoColor[THERMOS|GAE_STUDIO]=White logo
+
+logoColor[USB_KEY|ARCBEES]=Black logo
+logoColor[USB_KEY|GWTP]=White logo
+logoColor[USB_KEY|CHOSEN]=White logo
+logoColor[USB_KEY|JUKITO]=White logo
+logoColor[USB_KEY|GSSS]=White logo
+logoColor[USB_KEY|GQUERY]=White logo
+logoColor[USB_KEY|GAE_STUDIO]=White logo
+
+logoColor[PHONE_CASE|ARCBEES]=Black logo
+logoColor[PHONE_CASE|GWTP]=White logo
+logoColor[PHONE_CASE|CHOSEN]=White logo
+logoColor[PHONE_CASE|JUKITO]=White logo
+logoColor[PHONE_CASE|GSSS]=White logo
+logoColor[PHONE_CASE|GQUERY]=White logo
+logoColor[PHONE_CASE|GAE_STUDIO]=White logo
