BSTOR-51 - more cart translations Cyan -> Blue

--- a/client/src/main/resources/com/arcbees/beeshop/client/resources/AppMessages_en.properties
+++ b/client/src/main/resources/com/arcbees/beeshop/client/resources/AppMessages_en.properties
@@ -29,7 +29,7 @@ itemColor[SHIRT|CHOSEN]=Green Shirt
 itemColor[SHIRT|JUKITO]=Red Shirt
 itemColor[SHIRT|GSSS]=Purple Shirt
 itemColor[SHIRT|GQUERY]=Blue Shirt
-itemColor[SHIRT|GAE_STUDIO]=Cyan Shirt
+itemColor[SHIRT|GAE_STUDIO]=Blue Shirt
 
 itemColor[BAG|ARCBEES]=Yellow Bag
 itemColor[BAG|GWTP]=Orange Bag
@@ -37,7 +37,7 @@ itemColor[BAG|CHOSEN]=Green Bag
 itemColor[BAG|JUKITO]=Red Bag
 itemColor[BAG|GSSS]=Purple Bag
 itemColor[BAG|GQUERY]=Blue Bag
-itemColor[BAG|GAE_STUDIO]=Cyan Bag
+itemColor[BAG|GAE_STUDIO]=Blue Bag
 
 itemColor[MUG|ARCBEES]=Yellow Mug
 itemColor[MUG|GWTP]=Orange Mug
@@ -45,7 +45,7 @@ itemColor[MUG|CHOSEN]=Green Mug
 itemColor[MUG|JUKITO]=Red Mug
 itemColor[MUG|GSSS]=Purple Mug
 itemColor[MUG|GQUERY]=Blue Mug
-itemColor[MUG|GAE_STUDIO]=Cyan Mug
+itemColor[MUG|GAE_STUDIO]=Blue Mug
 
 itemColor[THERMOS|ARCBEES]=Yellow Thermos
 itemColor[THERMOS|GWTP]=Orange Thermos
@@ -53,7 +53,7 @@ itemColor[THERMOS|CHOSEN]=Green Thermos
 itemColor[THERMOS|JUKITO]=Red Thermos
 itemColor[THERMOS|GSSS]=Purple Thermos
 itemColor[THERMOS|GQUERY]=Blue Thermos
-itemColor[THERMOS|GAE_STUDIO]=Cyan Thermos
+itemColor[THERMOS|GAE_STUDIO]=Blue Thermos
 
 itemColor[USB_KEY|ARCBEES]=Yellow Usb Key
 itemColor[USB_KEY|GWTP]=Orange Usb Key
@@ -61,7 +61,7 @@ itemColor[USB_KEY|CHOSEN]=Green Usb Key
 itemColor[USB_KEY|JUKITO]=Red Usb Key
 itemColor[USB_KEY|GSSS]=Purple Usb Key
 itemColor[USB_KEY|GQUERY]=Blue Usb Key
-itemColor[USB_KEY|GAE_STUDIO]=Cyan Usb Key
+itemColor[USB_KEY|GAE_STUDIO]=Blue Usb Key
 
 itemColor[PHONE_CASE|ARCBEES]=Yellow Phone case
 itemColor[PHONE_CASE|GWTP]=Orange Phone case
@@ -69,7 +69,7 @@ itemColor[PHONE_CASE|CHOSEN]=Green Phone case
 itemColor[PHONE_CASE|JUKITO]=Red Phone case
 itemColor[PHONE_CASE|GSSS]=Purple Phone case
 itemColor[PHONE_CASE|GQUERY]=Blue Phone case
-itemColor[PHONE_CASE|GAE_STUDIO]=Cyan Phone case
+itemColor[PHONE_CASE|GAE_STUDIO]=Blue Phone case
 
 logoColor=
 logoColor[SHIRT|ARCBEES]=Yellow logo
@@ -94,7 +94,7 @@ logoColor[MUG|CHOSEN]=Green logo
 logoColor[MUG|JUKITO]=Red logo
 logoColor[MUG|GSSS]=Purple logo
 logoColor[MUG|GQUERY]=Blue logo
-logoColor[MUG|GAE_STUDIO]=Cyan logo
+logoColor[MUG|GAE_STUDIO]=Blue logo
 
 logoColor[THERMOS|ARCBEES]=Black logo
 logoColor[THERMOS|GWTP]=White logo
