--- a/client/src/main/resources/com/arcbees/beeshop/client/resources/AppMessages_fr.properties
+++ b/client/src/main/resources/com/arcbees/beeshop/client/resources/AppMessages_fr.properties
@@ -29,7 +29,7 @@ itemColor[SHIRT|CHOSEN]=Chandail vert
 itemColor[SHIRT|JUKITO]=Chandail rouge
 itemColor[SHIRT|GSSS]=Chandail mauve
 itemColor[SHIRT|GQUERY]=Chandail bleu
-itemColor[SHIRT|GAE_STUDIO]=Chandail cyan
+itemColor[SHIRT|GAE_STUDIO]=Chandail bleu
 
 itemColor[BAG|ARCBEES]=Sac jaune
 itemColor[BAG|GWTP]=Sac orange
@@ -37,7 +37,7 @@ itemColor[BAG|CHOSEN]=Sac vert
 itemColor[BAG|JUKITO]=Sac rouge
 itemColor[BAG|GSSS]=Sac mauve
 itemColor[BAG|GQUERY]=Sac bleu
-itemColor[BAG|GAE_STUDIO]=Sac cyan
+itemColor[BAG|GAE_STUDIO]=Sac bleu
 
 itemColor[MUG|ARCBEES]=Tasse jaune
 itemColor[MUG|GWTP]=Tasse orange
@@ -45,7 +45,7 @@ itemColor[MUG|CHOSEN]=Tasse verte
 itemColor[MUG|JUKITO]=Tasse rouge
 itemColor[MUG|GSSS]=Tasse mauve
 itemColor[MUG|GQUERY]=Tasse bleue
-itemColor[MUG|GAE_STUDIO]=Tasse cyan
+itemColor[MUG|GAE_STUDIO]=Tasse bleu
 
 itemColor[THERMOS|ARCBEES]=Thermos jaune
 itemColor[THERMOS|GWTP]=Thermos orange
@@ -53,7 +53,7 @@ itemColor[THERMOS|CHOSEN]=Thermos vert
 itemColor[THERMOS|JUKITO]=Thermos rouge
 itemColor[THERMOS|GSSS]=Thermos mauve
 itemColor[THERMOS|GQUERY]=Thermos bleu
-itemColor[THERMOS|GAE_STUDIO]=Thermos cyan
+itemColor[THERMOS|GAE_STUDIO]=Thermos bleu
 
 itemColor[USB_KEY|ARCBEES]=Clé USB jaune
 itemColor[USB_KEY|GWTP]=Clé USB orange
@@ -61,7 +61,7 @@ itemColor[USB_KEY|CHOSEN]=Clé USB verte
 itemColor[USB_KEY|JUKITO]=Clé USB rouge
 itemColor[USB_KEY|GSSS]=Clé USB mauve
 itemColor[USB_KEY|GQUERY]=Clé USB bleue
-itemColor[USB_KEY|GAE_STUDIO]=Clé USB cyan
+itemColor[USB_KEY|GAE_STUDIO]=Clé USB bleu
 
 itemColor[PHONE_CASE|ARCBEES]=Étui pour iPhone jaune
 itemColor[PHONE_CASE|GWTP]=Étui pour iPhone orange
@@ -69,7 +69,7 @@ itemColor[PHONE_CASE|CHOSEN]=Étui pour iPhone vert
 itemColor[PHONE_CASE|JUKITO]=Étui pour iPhone rouge
 itemColor[PHONE_CASE|GSSS]=Étui pour iPhone mauve
 itemColor[PHONE_CASE|GQUERY]=Étui pour iPhone bleu
-itemColor[PHONE_CASE|GAE_STUDIO]=Étui pour iPhone cyan
+itemColor[PHONE_CASE|GAE_STUDIO]=Étui pour iPhone bleu
 
 logoColor=
 logoColor[SHIRT|ARCBEES]=Logo jaune
@@ -94,7 +94,7 @@ logoColor[MUG|CHOSEN]=Logo vert
 logoColor[MUG|JUKITO]=Logo rouge
 logoColor[MUG|GSSS]=Logo mauve
 logoColor[MUG|GQUERY]=Logo bleu
-logoColor[MUG|GAE_STUDIO]=Logo cyan
+logoColor[MUG|GAE_STUDIO]=Logo bleu
 
 logoColor[THERMOS|ARCBEES]=Logo noir
 logoColor[THERMOS|GWTP]=Logo blanc
