--- a/client/src/main/resources/com/google/gwt/i18n/client/LocalizableResource.properties
+++ b/client/src/main/resources/com/google/gwt/i18n/client/LocalizableResource.properties
@@ -76,4 +76,8 @@ C22238FAE88FB0307525ABF1889F9F74=Return to shopping
 # Description: Size
 AF645946859133F0FB13B23577B39AB5=Size\:
 
+# Description: Can't buy items yet
+9D05C7E8B330D90FC2DC5992FF42F292=You will eventually be able to actually buy items, but we want to make sure everything is secure and ready beforehand\!
+
 ### NON-UIBINDER TRANSLATIONS
+
