BSTOR-75 - Gears -> Gear

--- a/client/src/main/resources/com/google/gwt/i18n/client/LocalizableResource.properties
+++ b/client/src/main/resources/com/google/gwt/i18n/client/LocalizableResource.properties
@@ -1,5 +1,5 @@
 # Description: to show our hive products
-9D7F8579015417C5862F97D03EB189EA=to show our hive of products and branded gears. Enjoy\!
+9D7F8579015417C5862F97D03EB189EA=to show our hive of products and branded gear. Enjoy\!
 
 # Description: Home
 8CF04A9734132302F96DA8E113E80CE5=Home
@@ -55,9 +55,6 @@ A7A4CCC5E1A068D87F4965E014329201=XL
 # Description: shop
 9F82518D468B9FEE614FCC92F76BB163=Shop
 
-# Description: add some gears in it
-E9CDECFC86257ADB6786A4F2CEF48C45=add some gears in it
-
 # Description: Your bag is so lonely
 74111668508573B4A9A8C16468CA0B58=Your bag is so lonely
 
@@ -78,6 +75,9 @@ AF645946859133F0FB13B23577B39AB5=Size\:
 
 # Description: Can't buy items yet
 9D05C7E8B330D90FC2DC5992FF42F292=You will eventually be able to actually buy items, but we want to make sure everything is secure and ready beforehand\!
+
+# Description: add some gear in it
+8F0E811CF1BA08914951D40AD302C13A=add some gear in it
 
 ### NON-UIBINDER TRANSLATIONS
 
