--- a/client/src/main/resources/com/google/gwt/i18n/client/LocalizableResource_fr.properties
+++ b/client/src/main/resources/com/google/gwt/i18n/client/LocalizableResource_fr.properties
@@ -73,10 +73,11 @@ F373B403975D367491574FB2C739FEF7=Panier
 # Description: Your bag is so lonely
 74111668508573B4A9A8C16468CA0B58=Votre panier est vide
 
-# Description: add some gears in it
-E9CDECFC86257ADB6786A4F2CEF48C45=ajoutez-y des articles
-
 # Description: Can't buy items yet
 9D05C7E8B330D90FC2DC5992FF42F292=Il sera éventuellement possible d''acheter nos produits. Nous voulons d''abord s''assurer que le tout est sécuritaire.
 
+# Description: add some gear in it
+8F0E811CF1BA08914951D40AD302C13A=ajoutez-y des articles
+
 ### NON-UIBINDER TRANSLATIONS
+
