BSTOR-75 - add gear in -> add gear to

--- a/client/src/main/resources/com/google/gwt/i18n/client/LocalizableResource.properties
+++ b/client/src/main/resources/com/google/gwt/i18n/client/LocalizableResource.properties
@@ -77,7 +77,7 @@ AF645946859133F0FB13B23577B39AB5=Size\:
 9D05C7E8B330D90FC2DC5992FF42F292=You will eventually be able to actually buy items, but we want to make sure everything is secure and ready beforehand\!
 
 # Description: add some gear in it
-8F0E811CF1BA08914951D40AD302C13A=add some gear in it
+8F0E811CF1BA08914951D40AD302C13A=add some gear to it
 
 ### NON-UIBINDER TRANSLATIONS
 
