--- a/client/src/main/resources/com/arcbees/beeshop/client/resources/AppMessages_fr.properties
+++ b/client/src/main/resources/com/arcbees/beeshop/client/resources/AppMessages_fr.properties
@@ -13,7 +13,7 @@ productName[BAG]=Sac
 productName[MUG]=Tasse
 productName[THERMOS]=Thermos
 productName[USB_KEY]=Clé USB
-productName[PHONE_CASE]=Protecteur de iPhone
+productName[PHONE_CASE]=Étui pour iPhone
 
 size=
 size[SMALL]=Small
