--- a/client/src/main/resources/com/arcbees/beeshop/client/resources/PriceMessages_fr.properties
+++ b/client/src/main/resources/com/arcbees/beeshop/client/resources/PriceMessages_fr.properties
@@ -13,4 +13,4 @@ productName[BAG]=Sac
 productName[MUG]=Tasse
 productName[THERMOS]=Thermos
 productName[USB_KEY]=Clé USB
-productName[PHONE_CASE]=<span class=\"{1}\">Protecteur</span> <span class=\"{2}\">de iPhone</span>
+productName[PHONE_CASE]=<span class=\"{1}\">Étui</span> <span class=\"{2}\">pour iPhone</span>
