--- a/client/src/main/resources/com/google/gwt/i18n/client/LocalizableResource.properties
+++ b/client/src/main/resources/com/google/gwt/i18n/client/LocalizableResource.properties
@@ -1,4 +1,5 @@
 # Description: to show our hive products
+# TODO: DEPRECATED (CONSIDER REMOVING)
 9D7F8579015417C5862F97D03EB189EA=to show our hive of products and branded gear. Enjoy\!
 
 # Description: Home
@@ -26,6 +27,7 @@ A7A4CCC5E1A068D87F4965E014329201=XL
 84BE54BB4BD1B755A27D86388700D097=Brands
 
 # Description: next product
+# TODO: DEPRECATED (CONSIDER REMOVING)
 7D0F7B8A8B1BFCBBE465742F7D509AB2=Next Product
 
 # Description: size
@@ -41,6 +43,7 @@ A7A4CCC5E1A068D87F4965E014329201=XL
 5A2527D5BD6D4437026E7858C9CD30E8=edium
 
 # Description: previous product
+# TODO: DEPRECATED (CONSIDER REMOVING)
 3087C2F01537D66481494BB26E2089F3=Previous Product
 
 # Description: mall (small)
@@ -76,8 +79,17 @@ AF645946859133F0FB13B23577B39AB5=Size\:
 # Description: Can't buy items yet
 9D05C7E8B330D90FC2DC5992FF42F292=You will eventually be able to actually buy items, but we want to make sure everything is secure and ready beforehand\!
 
+# Description: to show our hive products
+FE31992B50145750287A39F103EDF5BA=to show our hive of products and branded gear. Enjoy\!
+
 # Description: add some gear in it
-8F0E811CF1BA08914951D40AD302C13A=add some gear to it
+DFC5F45A5F7807B71C7BD9D79533B989=add some gear to it
+
+# Description: next product
+07A3DA6424E4472FA31C0EADCB208802=Next <span>Product</span>
+
+# Description: previous product
+0553EC249A8BA6B478A9BABA8EBBF0E9=Previous <span>Product</span>
 
 ### NON-UIBINDER TRANSLATIONS
 
