--- a/client/src/main/resources/com/google/gwt/i18n/client/LocalizableResource_fr.properties
+++ b/client/src/main/resources/com/google/gwt/i18n/client/LocalizableResource_fr.properties
@@ -1,6 +1,3 @@
-# Description: to show our hive products
-9D7F8579015417C5862F97D03EB189EA=pour démontrer les produits de Hive et nos accessoires. Amusez-vous\!
-
 # Description: Contact us
 02D4482D332E1AEF3437CD61C9BCC624=Contact
 
@@ -25,9 +22,6 @@ AA532DBBD6A91E57BF008285F2E8461E=magasiner par marque
 # Description: mall (small)
 2EE385D4E42E07F2C539B597559E70EE=etit
 
-# Description: previous product
-3087C2F01537D66481494BB26E2089F3=Produit précédent
-
 # Description: edium (medium)
 5A2527D5BD6D4437026E7858C9CD30E8=oyen
 
@@ -39,9 +33,6 @@ AA532DBBD6A91E57BF008285F2E8461E=magasiner par marque
 
 # Description: size
 6F6CB72D544962FA333E2E34CE64F719=Grandeur
-
-# Description: next product
-7D0F7B8A8B1BFCBBE465742F7D509AB2=Produit suivant
 
 # Description: brands
 84BE54BB4BD1B755A27D86388700D097=Marque
@@ -76,8 +67,17 @@ F373B403975D367491574FB2C739FEF7=Panier
 # Description: Can't buy items yet
 9D05C7E8B330D90FC2DC5992FF42F292=Il sera éventuellement possible d''acheter nos produits. Nous voulons d''abord s''assurer que le tout est sécuritaire.
 
+# Description: previous product
+0553EC249A8BA6B478A9BABA8EBBF0E9=<span>Produit</span> précédent
+
+# Description: next product
+07A3DA6424E4472FA31C0EADCB208802=<span>Produit</span> Suivant
+
 # Description: add some gear in it
-8F0E811CF1BA08914951D40AD302C13A=ajoutez-y des articles
+DFC5F45A5F7807B71C7BD9D79533B989=ajoutez-y des articles
+
+# Description: to show our hive products
+FE31992B50145750287A39F103EDF5BA=pour démontrer nos produits et accessoires. Amusez-vous\!
 
 ### NON-UIBINDER TRANSLATIONS
 
