--- a/client/src/main/resources/com/google/gwt/i18n/client/LocalizableResource_fr.properties
+++ b/client/src/main/resources/com/google/gwt/i18n/client/LocalizableResource_fr.properties
@@ -68,7 +68,7 @@ F373B403975D367491574FB2C739FEF7=Panier
 9D05C7E8B330D90FC2DC5992FF42F292=Il sera éventuellement possible d''acheter nos produits. Nous voulons d''abord s''assurer que le tout est sécuritaire.
 
 # Description: previous product
-0553EC249A8BA6B478A9BABA8EBBF0E9=<span>Produit</span> précédent
+0553EC249A8BA6B478A9BABA8EBBF0E9=<span>Produit</span> Précédent
 
 # Description: next product
 07A3DA6424E4472FA31C0EADCB208802=<span>Produit</span> Suivant
