SEO product description + title

--- a/client/src/main/resources/com/arcbees/beestore/client/resources/AppMessages_fr.properties
+++ b/client/src/main/resources/com/arcbees/beestore/client/resources/AppMessages_fr.properties
@@ -45,7 +45,7 @@ itemColor[MUG|CHOSEN]=Tasse verte
 itemColor[MUG|JUKITO]=Tasse rouge
 itemColor[MUG|GSSS]=Tasse mauve
 itemColor[MUG|GQUERY]=Tasse bleue
-itemColor[MUG|GAE_STUDIO]=Tasse bleu
+itemColor[MUG|GAE_STUDIO]=Tasse bleue
 
 itemColor[THERMOS|ARCBEES]=Thermos jaune
 itemColor[THERMOS|GWTP]=Thermos orange
@@ -61,7 +61,7 @@ itemColor[USB_KEY|CHOSEN]=Clé USB verte
 itemColor[USB_KEY|JUKITO]=Clé USB rouge
 itemColor[USB_KEY|GSSS]=Clé USB mauve
 itemColor[USB_KEY|GQUERY]=Clé USB bleue
-itemColor[USB_KEY|GAE_STUDIO]=Clé USB bleu
+itemColor[USB_KEY|GAE_STUDIO]=Clé USB bleue
 
 itemColor[PHONE_CASE|ARCBEES]=Étui pour iPhone jaune
 itemColor[PHONE_CASE|GWTP]=Étui pour iPhone orange
