--- a/server/src/main/resources/com/arcbees/beestore/server/seo_fr.properties
+++ b/server/src/main/resources/com/arcbees/beestore/server/seo_fr.properties
@@ -1,3 +1,4 @@
 title=Beestore
 description=Un exemple d'application GWTP. Une étude de cas démontrant les fonctionnalités de GWTP, et démontrant comment les utiliser.
 keywords=Arcbees, GWTP, Beestore, example, projet
+image=http://store.arcbees.com/img/beestore_logo.png
