--- a/client/src/main/resources/com/arcbees/beestore/client/resources/PriceMessages_fr.properties
+++ b/client/src/main/resources/com/arcbees/beestore/client/resources/PriceMessages_fr.properties
@@ -1,5 +1,5 @@
 brandName={1}{2}
-brandName[ARCBEES]=Bee
+brandName[ARCBEES]=<span class=\"{2}\">Arcbees</span>
 brandName[GWTP]=GWTP
 brandName[CHOSEN]=Chosen
 brandName[JUKITO]=Jukito
