--- a/client/src/main/resources/com/arcbees/beestore/client/resources/AppMessages_en.properties
+++ b/client/src/main/resources/com/arcbees/beestore/client/resources/AppMessages_en.properties
@@ -1,5 +1,5 @@
 brandName=
-brandName[ARCBEES]=Bee
+brandName[ARCBEES]=Arcbees
 brandName[GWTP]=GWTP
 brandName[CHOSEN]=Chosen
 brandName[JUKITO]=Jukito
