Added french translation for checkout

--- a/client/src/main/resources/com/google/gwt/i18n/client/LocalizableResource.properties
+++ b/client/src/main/resources/com/google/gwt/i18n/client/LocalizableResource.properties
@@ -1,7 +1,3 @@
-# Description: to show our hive products
-# TODO: DEPRECATED (CONSIDER REMOVING)
-9D7F8579015417C5862F97D03EB189EA=to show our hive of products and branded gear. Enjoy\!
-
 # Description: Home
 8CF04A9734132302F96DA8E113E80CE5=Home
 
@@ -26,10 +22,6 @@ A7A4CCC5E1A068D87F4965E014329201=XL
 # Description: brands
 84BE54BB4BD1B755A27D86388700D097=Brands
 
-# Description: next product
-# TODO: DEPRECATED (CONSIDER REMOVING)
-7D0F7B8A8B1BFCBBE465742F7D509AB2=Next Product
-
 # Description: size
 6F6CB72D544962FA333E2E34CE64F719=Size
 
@@ -41,10 +33,6 @@ A7A4CCC5E1A068D87F4965E014329201=XL
 
 # Description: edium (medium)
 5A2527D5BD6D4437026E7858C9CD30E8=edium
-
-# Description: previous product
-# TODO: DEPRECATED (CONSIDER REMOVING)
-3087C2F01537D66481494BB26E2089F3=Previous Product
 
 # Description: mall (small)
 2EE385D4E42E07F2C539B597559E70EE=mall
@@ -70,7 +58,7 @@ F373B403975D367491574FB2C739FEF7=Shopping cart
 # Description: Return to shopping
 C22238FAE88FB0307525ABF1889F9F74=Return to shopping
 
-# Description: Proceed to checkout
+# Description: Order - Proceed to checkout
 7E0BF6D67701868AAC3116ADE8FEA957=Proceed to checkout
 
 # Description: Size
@@ -90,6 +78,93 @@ DFC5F45A5F7807B71C7BD9D79533B989=add some gear to it
 
 # Description: previous product
 0553EC249A8BA6B478A9BABA8EBBF0E9=Previous <span>Product</span>
+
+# Description: Address - Title
+DD7BF230FDE8D4836917806AFF6A6B27=Address
+
+# Description: Address - Shipping
+0C458988127EB2150776881E2EF3F0C4=Shipping address
+
+# Description: Address - FirstName
+7D991D89FE948AE4F8CC110E872F5C60=First name*
+
+# Description: Address - Phone
+F0B2B186C5FC16E9EC11784D5B160AC2=Phone*
+
+# Description: Address - City
+E9331B1320F4A9A7542F710A0B1F96BA=Town city*
+
+# Description: Address - LastName
+D2CD101C847A69EA2DC502D153A51857=Last name*
+
+# Description: Address - State
+B8464CDD84B5F068AD72BF5C4F32163D=States
+
+# Description: Address - Address
+92E5F0BC8B38637B7901571939F67169=Address*
+
+# Description: Address - Email
+763EDB7BBB97C00AA772C49AF670BFA3=Email*
+
+# Description: Address - Country
+59716C97497EB9694541F7C3D37B1A4D=Country
+
+# Description: Address - Company
+1C76CBFE21C6F44C1D1E59D54F3E4420=Company
+
+# Description: Address - Continue
+A0BFB8E59E6C13FC8D990781F77694FE=Continue
+
+# Description: Order - Order Total
+FCF35BD8E66B772C865588339B93BFEC=Order Total
+
+# Description: Order - Shipping standard
+E95D91A0DA36E54D2BAA84DF0ACA8B23=4-5 Business days
+
+# Description: Order - Order
+A240FA27925A635B08DC28C9E4F9216D=Order
+
+# Description: Order - Shipping and handling
+7589DFA9A5A899E9701335164C9AB520=Shipping and handling
+
+# Description: Order - Shipping internationnal delivery
+569B506F9BC511A1B93035883F3D8F0A=International delivery
+
+# Description: Order - Your order
+5238BD0D26EE4C221BADD6E6C6475412=Your order
+
+# Description: Order - Tax
+4B78AC8EB158840E9638A3AEB26C4A9D=Tax
+
+# Description: Order - Shipping inter. delivery - days
+14E7035C87578D6C857363217041E5CB=10-12 Business days
+
+# Description: Payment - Payment method
+F0AAAAE189E9C7711931A65FFCD22543=Payment method
+
+# Description: Payment - Place order
+E7965AE5942A09B8778AF5A9FD481460=Place order
+
+# Description: Payment - Credit card
+D83D5AA5C718FEF1F06FB86C00EEB381=credit card
+
+# Description: Payment - Learn more
+D59048F21FD887AD520398CE677BE586=Learn more
+
+# Description: Payment - Payment
+C453A4B8E8D98E82F35B67F433E3B4DA=Payment
+
+# Description: Payment - Card Number
+A44217022190F5734B2F72BA1E4F8A79=Card number
+
+# Description: Payment - Credit card expiration YYYY
+8DF34BB962577B90D574A51ED2CA757F=YYYY
+
+# Description: Payment - Name on the card
+7886E946FDE6088A719296719BE5F5B7=Name on the card
+
+# Description: Payment - We don't store credit info
+2769C852850DADCEC71AB7354AFC7D6B=We don''t store any credit information on our server.
 
 ### NON-UIBINDER TRANSLATIONS
 
