Changed Email for Courriel in french

--- a/client/src/main/resources/com/google/gwt/i18n/client/LocalizableResource_fr.properties
+++ b/client/src/main/resources/com/google/gwt/i18n/client/LocalizableResource_fr.properties
@@ -95,7 +95,7 @@ DD7BF230FDE8D4836917806AFF6A6B27=Adresse
 59716C97497EB9694541F7C3D37B1A4D=Pays
 
 # Description: Address - Email
-763EDB7BBB97C00AA772C49AF670BFA3=Email*
+763EDB7BBB97C00AA772C49AF670BFA3=Courriel*
 
 # Description: Address - Address
 92E5F0BC8B38637B7901571939F67169=Adresse*
